--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,22 @@
 body{
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: url('./src/background.webp');
     background-size: cover;
     overflow: hidden;
 }
 
 /* SPACESHIPS */
+
+img{
+    width: 80px;
+}
+
+video{
+    opacity: 40%;
+}
 
 #milleniumFalcon{
     display: none;
